<resources>
    <string name="app_name">Just Java</string>

    <!--Hint for EditText view  -->
    <string name="name_hint">Name</string>

    <!-- Title of Toppings list    -->
    <string name="toppings">Toppings</string>

    <!--    Whipped cream checkbox text-->
    <string name="whipped_cream">Whipped Cream</string>

    <!--    Chocolate CheckBox text-->
    <string name="chocolate">Chocolate</string>

    <!--    Quantity of coffees -->
    <string name="quantity">Quantity</string>

    <!--    Decrement quantity button -->
    <string name="decrement_quantity">-</string>

    <!--    Initial quantity of 1 coffee-->
    <string name="initial_quantity">1</string>

    <!-- Increment quantity button -->
    <string name="increment_quantity">+</string>

    <!--    Order button title -->
    <string name="order_button">Order</string>

    <!--    Local stings for Java files-->

    <!--    Toast for trying to order less than minimum number of coffees-->
    <string name="too_few_coffees">Too few cups of coffee</string>

    <!--    Toast for trying to order more than maximum number of coffees-->
    <string name="too_many_coffees">Too many cups of coffee</string>

    <!--    Thank you in order summary-->
    <string name="thank_you">Thank You!</string>

    <!--    Order summary customer name-->
    <string name="order_summary_name">Name:</string>
    <!--    Add whipped cream in order summary-->
    <string name="order_summary_whipped_cream">Add whipped cream?</string>

    <!--    Add chocolate in order summary-->
    <string name="order_summary_chocolate">Add chocolate?</string>

    <!--    Total amount in order summary-->
    <string name="order_summary_total">Total:</string>

    <!--    Order summary Quantity-->
    <string name="order_summary_quantity">Quantity:</string>
</resources>