<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity">

        <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/name_hint"
                android:autofillHints="username"
                android:layout_marginBottom="16dp"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toppings"
                android:textAllCaps="true"
                android:paddingLeft="8dp"
                android:layout_marginBottom="16dp"
        />

        <CheckBox
                android:id="@+id/whipped_cream_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whipped_cream"
                android:textSize="16sp"
                android:paddingLeft="24dp"
                android:layout_marginBottom="16dp"
        />

        <CheckBox
                android:id="@+id/chocolate_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chocolate"
                android:textSize="16sp"
                android:paddingLeft="24dp"
                android:layout_marginBottom="16dp"
        />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textAllCaps="true"
                android:paddingLeft="8dp"
                android:layout_marginBottom="16dp"
        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >
            <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/decrement_quantity"
                    android:layout_marginLeft="8dp"
                    android:onClick="decrementQuantity"

            />
            <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_quantity"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:paddingLeft="8dp"
            />
            <Button
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:text="@string/increment_quantity"
                    android:layout_marginLeft="8dp"
                    android:onClick="incrementQuantity"
            />
        </LinearLayout>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_button"
                android:textColor="#000000"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray"
                android:layout_marginLeft="8dp"
                android:onClick="submitOrder"
        />

    </LinearLayout>
</ScrollView>